-
Bug
-
Resolution: Done
-
P4: Low
-
5.9.2, 5.10.0 Beta 3
-
4dbc8ff19c44377af9d9af152aded147a6cb536b
After configuring Qt with -opengl es, sphere with MetalRoughMaterial QML not working at all.
No warning or errors. Everythings works with -opengl desktop
| For Gerrit Dashboard: QTBUG-64390 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 247409,3 | Enable ES3 rendering of MetalRoughMaterial | 5.12 | qt/qt3d | Status: MERGED | +2 | 0 |