Enable ES3 rendering of MetalRoughMaterial

Change-Id: I1cc6700c9d16db1ad3e17f63a89d65c02bd8a202
Task-number: QTBUG-64390
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>